--- a/Youtube-Swift-Xib/ModalController.xib
+++ b/Youtube-Swift-Xib/ModalController.xib
@@ -20,6 +20,9 @@
                     <state key="normal" title="Dismiss">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="dismiss" destination="-1" eventType="touchUpInside" id="LkR-Cx-4VP"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
