--- a/Youtube-Swift-Xib/ViewController.xib
+++ b/Youtube-Swift-Xib/ViewController.xib
@@ -27,6 +27,19 @@
                     <state key="normal" title="Modal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="didTapModal" destination="-1" eventType="touchUpInside" id="JPR-aj-DlW"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="02S-vm-0LW">
+                    <rect key="frame" x="119" y="172" width="39" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Video">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="didTapVideo" destination="-1" eventType="touchUpInside" id="0XR-hn-fND"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
